Trying to fix flickering on reload
https://dev.to/ayc0/light-dark-mode-avoid-flickering-on-reload-1567

--- a/bun/uts-style.css
+++ b/bun/uts-style.css
@@ -79,7 +79,7 @@ body {
     }
 }
 
-:root,
+
 :root[data-applied-mode="light"] {
     color-scheme: light;
     --uts-text: black;
@@ -91,17 +91,18 @@ body {
     /* #f4ecd9; */
 }
 
+:root,
 :root[data-applied-mode="dark"] {
     color-scheme: dark;
-    --uts-text: #d5d4d0;
-    --uts-link: #d5d4d0;
+    --uts-text: #cbd1db;
+    --uts-link: #cbd1db;
     --uts-text-gentle: rgb(174, 174, 174);
     --uts-text-cite: #8cd295;
-    --uts-background: #262626;
+    --uts-background: #151a1f;
     --uts-vocab: #db8c84;
 }
 
-body {
+:root {
     background-color: var(--uts-background) !important;
 }
 
